контент и разметка до слайдера

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -56,15 +55,15 @@
 					<h3 class="genres-item_title">Гитара</h3>
 					<p class="genres-text">Хочешь играть как Джими Хендрикс, Би Би Кинг или Андрес Сеговия— мы научим</p> 
 				</div>
-				<div class="genres_list"> 
+				<div class="genres_list vocal"> 
 					<h3 class="genres-item_title">Вокал</h3>
 					<p class="genres-text">Академический, рок, эстрадный, джазовый </p> 
 				</div>
-				<div class="genres_list"> 
+				<div class="genres_list fortepiano"> 
 					<h3 class="genres-item_title">Фортепиано</h3>
 					<p class="genres-text">Академический, рок, эстрадный, джазовый </p> 
 				</div>
-				<div class="genres_list"> 
+				<div class="genres_list lectures"> 
 					<h3 class="genres-item_title">Лекции</h3>
 					<p class="genres-tex">Подтяни свои знания в теории музыки</p> 
 				</div>
@@ -78,23 +77,29 @@
 	<div class="container">
 		<div class="row">
 			<div class="temp-left"></div>
-			<h2 class="temp-title"></h2>
+			<h2 class="temp-title">Задаем темп</h2>
 			<div class="temp-items">
-				<h3></h3>
-				<p></p>
+				<h3>Состав</h3>
+				<p>Тебя будут обучать провессионалы с высшим музыкальным образованием</p>
 			</div>
 			<div class="temp-items">
-				<h3></h3>
-				<p></p>
+				<h3>Результат</h3>
+				<p>Выступи на отчетном концерте через 3 месяца обучения</p>
 			</div>
 			<div class="temp-right">
 				<div class="temp-items">
-					<h3></h3>
-					<p></p>
+					<h3>Студия</h3>
+					<p>Запиши свою песню в нашей студии звукозаписи, одна песня в месяц бесплатно</p>
 				</div>
 				<div class="temp-items">
-					<h3></h3>
-					<p></p>
+					<form action="" class="form">
+					<h2 class="form__title">Вводный урок</h2>
+					<p class="form__text">Попробуй любые направления  бесплатно</p>
+					<input type="text" class="form__input">
+					<input type="text" class="form__input">
+					<select class=form__select></select>
+					<button class="form__btn btn">Записаться</button>
+				</form>
 				</div>
 			</div>
 		</div>
@@ -105,7 +110,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="gallery-title">
-				<h2></h2>
+				<h2>В стенах школы</h2>
 			</div>
 			<div class="gallery-list">
 				<div class="gallery-item"></div>
