--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
 		<div class="row">
 			<h2 class="genres-title">Растим музыкантов</h2>
 			<div class="row">
-				<div class="genres_list guitar"> 
+				<div class="genres_list guitar col-5"> 
 					<h3 class="genres-item_title">Гитара</h3>
 					<p class="genres-text">Хочешь играть как Джими Хендрикс, Би Би Кинг или Андрес Сеговия— мы научим</p> 
 				</div>
-				<div class="genres_list vocal"> 
+				<div class="genres_list vocal col-7"> 
 					<h3 class="genres-item_title">Вокал</h3>
 					<p class="genres-text">Академический, рок, эстрадный, джазовый </p> 
 				</div>
-				<div class="genres_list fortepiano"> 
+				<div class="genres_list fortepiano col-5"> 
 					<h3 class="genres-item_title">Фортепиано</h3>
 					<p class="genres-text">Академический, рок, эстрадный, джазовый </p> 
 				</div>
-				<div class="genres_list lectures"> 
+				<div class="genres_list lectures col-3"> 
 					<h3 class="genres-item_title">Лекции</h3>
 					<p class="genres-tex">Подтяни свои знания в теории музыки</p> 
 				</div>
-				<div class="genres_list"> <h3 class="genres-item_title">Все направления</h3>
+				<div class="genres_list col-3"> <h3 class="genres-item_title">Все направления</h3>
 			</div>
 		</div>
 	</div>
@@ -76,22 +76,23 @@
 <section class="temp">
 	<div class="container">
 		<div class="row">
-			<div class="temp-left"></div>
-			<h2 class="temp-title">Задаем темп</h2>
-			<div class="temp-items">
-				<h3>Состав</h3>
-				<p>Тебя будут обучать провессионалы с высшим музыкальным образованием</p>
+			<div class="temp-left col-6">
+				<h2 class="temp-title">Задаем темп</h2>
+				<div class="temp-items col-6">
+					<h3>Состав</h3>
+					<p>Тебя будут обучать провессионалы с высшим музыкальным образованием</p>
+				</div>
+				<div class="temp-items col-6">
+					<h3>Результат</h3>
+					<p>Выступи на отчетном концерте через 3 месяца обучения</p>
+				</div>
 			</div>
-			<div class="temp-items">
-				<h3>Результат</h3>
-				<p>Выступи на отчетном концерте через 3 месяца обучения</p>
-			</div>
-			<div class="temp-right">
-				<div class="temp-items">
+			<div class="temp-right col-6">
+				<div class="temp-items col-6">
 					<h3>Студия</h3>
 					<p>Запиши свою песню в нашей студии звукозаписи, одна песня в месяц бесплатно</p>
 				</div>
-				<div class="temp-items">
+				<div class="temp-items col-6">
 					<form action="" class="form">
 					<h2 class="form__title">Вводный урок</h2>
 					<p class="form__text">Попробуй любые направления  бесплатно</p>
@@ -113,10 +114,10 @@
 				<h2>В стенах школы</h2>
 			</div>
 			<div class="gallery-list">
-				<div class="gallery-item"></div>
-				<div class="gallery-item"></div>
-				<div class="gallery-item"></div>
-				<div class="gallery-item"></div>
+				<div class="gallery-item col-9"></div>
+				<div class="gallery-item col-3"></div>
+				<div class="gallery-item col-3"></div>
+				<div class="gallery-item col-3"></div>
 			</div>
 		</div>
 	</div>
@@ -127,8 +128,8 @@
 		<div class="row">
 			<div class="map-address">
 				<div class="row">
-					<div class="map-title"></div>
-					<div class="map-address"></div>
+					<h2 class="map-title">Ждем тебя</h2>
+					<div class="map-address">+7 (812) 566 56 56 СПБ, 6-я Линия ВО, 42</div>
 				</div>
 				<div class="map"></div>
 			</div>
@@ -138,13 +139,13 @@
 </section>
 
 <section class="footer">
-	<div class="footer-logo"></div>
+	<div class="footer-logo">Diez</div>
 	<div class="socials">
 		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
+			<li>youtube</li>
+			<li>instagram</li>
+			<li>facebook</li>
+			<li>vkontakte</li>
 		</ul>
 	</div>
 </section>
