--- a/index.html
+++ b/index.html
@@ -169,9 +169,10 @@
 	<div class="container">
 		<div class="row">
 			<div class="map-address col-9">
-					<h2 class="map-title col-8">Ждем тебя</h2>
-				
-					<div class="map-address col-4">+7 (812) 566 56 56 СПБ, 6-я Линия ВО, 42</div>
+					<div class="page-map__contact">	
+					<h2 class="page-map__title col-8">Ждем тебя</h2>				
+					<div class="page-map__address col-4">+7 (812) 566 56 56 <br> СПБ, 6-я Линия ВО, 42</div>
+					</div>
 				
 					<div id="map" class="map col-12">
 
@@ -212,11 +213,11 @@
 <section class="footer">
 	<div class="footer__logo">Diez</div>
 	<div class="footer__socials">
-		<ul>
-			<li>youtube</li>
-			<li>instagram</li>
-			<li>facebook</li>
-			<li>vkontakte</li>
+		<ul class="footer__socials__list">
+			<li class="footer__socials__item">youtube</li>
+			<li class="footer__socials__item">instagram</li>
+			<li class="footer__socials__item">facebook</li>
+			<li class="footer__socials__item">vkontakte</li>
 		</ul>
 	</div>
 </section>
