--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
 </section>
 
 <section class="footer">
+	<div class="container">
+		<div class="row">
 	<div class="footer__logo">Diez</div>
 	<div class="footer__socials">
 		<ul class="footer__socials__list">
@@ -219,7 +221,10 @@
 			<li class="footer__socials__item">facebook</li>
 			<li class="footer__socials__item">vkontakte</li>
 		</ul>
+	</div>			
+		</div>
 	</div>
+
 </section>
 
 	<!-- <header class="page-header">
