--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
 	<div class="footer__logo">Diez</div>
 	<div class="footer__socials">
 		<ul class="footer__socials__list">
-			<li class="footer__socials__item">youtube</li>
-			<li class="footer__socials__item">instagram</li>
-			<li class="footer__socials__item">facebook</li>
-			<li class="footer__socials__item">vkontakte</li>
+			<li class="footer__socials__item"> <a href="#">youtube</a> </li>
+			<li class="footer__socials__item"> <a href="#">instagram</a> </li>
+			<li class="footer__socials__item"> <a href="#">facebook</a> </li>
+			<li class="footer__socials__item"> <a href="#">vkontakte</a> </li>
 		</ul>
 	</div>			
 		</div>
