--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Document</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -28,6 +29,9 @@
 			<div class="col-9 promo">
 				<h1 class="promo__tatle">Diez — школа музыкального искусства</h1>
 				<p class="promo__text">Научим петь, играть на инструментах, не бояться сцены и получать удовольствие от музыки</p>
+				<div class="promo__btn">
+					<a href="#"><h2>Вводный урок</h2></a>
+					</div>
 			</div>
 			<div class="col-3">
 				<form action="" class="form">
