мобаил промо, жанры, about

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-9 promo">
-				<h1 class="promo__tatle">Diez — школа музыкального искусства</h1>
-				<p class="promo__text">Научим петь, играть на инструментах, не бояться сцены и получать удовольствие от музыки</p>
+				<div class="promo promo--offset">
+				<h1 class="promo__tatle">Diez — школа музыкального искусства</h1><h1 class="promo__tatle--mobail">Школа музыкального искусства</h1>
+				<p class="promo__text">Научим петь, играть на инструментах, не бояться сцены и получать удовольствие от музыки</p>					
+				</div>
 				<div class="promo__btn">
 					<a href="#"><h2>Вводный урок</h2></a>
 					</div>
@@ -99,16 +101,19 @@
 
 				<div class="temp__team temp__card temp__card--offset col-3">
 					<h3>Состав</h3>
-					<p>Тебя будут обучать провессионалы с высшим музыкальным образованием</p>
+					<p class="temp__card--fullscreen">Тебя будут обучать провессионалы с высшим музыкальным образованием</p>
+					<p class="temp__card--mobile">Учись только у профессионалов</p>
 				</div>
 				<div class="temp__result temp__card temp__card--offset col-3">
 					<h3>Результат</h3>
-					<p>Выступи на отчетном концерте через 3 месяца обучения</p>
+					<p class="temp__card--fullscreen">Выступи на отчетном концерте через 3 месяца обучения</p>
+					<p class="temp__card--mobile">Выуступай на отчетных концертах</p>
 				</div>
 		
 				<div class="temp__studio temp__card col-3">
 					<h3>Студия</h3>
-					<p>Запиши свою песню в нашей студии звукозаписи, одна песня в месяц бесплатно</p>
+					<p class="temp__card--fullscreen">Запиши свою песню в нашей студии звукозаписи, одна песня в месяц бесплатно</p>
+					<p class="temp__card--mobile">Записывай песни каждый месяц</p>
 				</div>
 
 				<div class="temp__form temp__card col-3">
