кнопка, карта галерея для 320

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<h1 class="promo__tatle">Diez — школа музыкального искусства</h1><h1 class="promo__tatle--mobail">Школа музыкального искусства</h1>
 				<p class="promo__text">Научим петь, играть на инструментах, не бояться сцены и получать удовольствие от музыки</p>					
 				</div>
-				<div class="promo__btn">
+				<div class="btn-mobail">
 					<a href="#"><h2>Вводный урок</h2></a>
 					</div>
 			</div>
@@ -142,34 +142,33 @@
 			<div class="gallery__title">
 				<h2>В стенах школы</h2>
 			</div>
-		<div class="row">
-				<div class="col-8 gallery__item--cherry">
+		<div class="row gallery__wrap">
+				<div class="col-8 gallery__item gallery__item--cherry">
 					<h3>Зимняя вишня</h3>
 					<p>Заключительный зимний концерт 2017 года
 выступало 97 учеников</p>
 				</div>
-				
-			<div class="gallery-list col-3">
-					<div class="gallery__item gallery__item--yang" style="">
+				<!-- 
+					<div class="gallery-list col-3"> -->
+					<div class="gallery__item col-3 gallery__item--yang" style="">
 						<div class="gallery--offset">
 							<h3>Янг Чжо</h3>
 							<p>Репетиция сольной партии скрипки</p>
 						</div>
 					</div>
-					<div class="gallery__item gallery__item--calm">
+					<div class="gallery__item  col-3 gallery__item--calm">
 						<div class="gallery--offset">
 						<h3>Летний штиль</h3>
 						<p>За кулисами концерта</p>
 						</div>
 					</div>
-					<div class="gallery__item gallery__item--trofimov">
+					<div class="gallery__item col-3 gallery__item--trofimov">
 						<div class="gallery--offset">
 						<h3>Сергей Трофимов</h3>
 						<p>ЛЮБЭ-Выйду в поле с конем</p>
 						</div>
-					</div>
-				</div>
-			
+				<!-- 	</div> -->
+				</div>			
 		</div>
 	</div>
 </section>
@@ -196,6 +195,9 @@
 				        });
 					    }
 						</script>
+						<div class="btn-mobail">
+					<a href="#"><h2>Вводный урок</h2></a>
+					</div>
 					</div>
 						
 				</div>
@@ -235,6 +237,8 @@
 	</div>
 
 </section>
+
+
 
 	<!-- <header class="page-header">
 		<div class="page-header-inner container">
@@ -353,5 +357,7 @@
 </section>
 
  -->
+
+   <script src="js/script.js"></script>
 </body>
 </html>
