--- a/index.html
+++ b/index.html
@@ -137,40 +137,41 @@
 	</div>
 </section>		
 
+
 <section class="gallery">
-	<div class="container">
-			<div class="gallery__title">
-				<h2>В стенах школы</h2>
-			</div>
-		<div class="row gallery__wrap">
-				<div class="col-8 gallery__item gallery__item--cherry">
-					<h3>Зимняя вишня</h3>
-					<p>Заключительный зимний концерт 2017 года
+  <div class="container">
+      <div class="gallery__title">
+        <h2>В стенах школы</h2>
+      </div>
+    <div class="row">
+        <div class="col-8 gallery__item--cherry">
+          <h3>Зимняя вишня</h3>
+          <p>Заключительный зимний концерт 2017 года
 выступало 97 учеников</p>
-				</div>
-				<!-- 
-					<div class="gallery-list col-3"> -->
-					<div class="gallery__item col-3 gallery__item--yang" style="">
-						<div class="gallery--offset">
-							<h3>Янг Чжо</h3>
-							<p>Репетиция сольной партии скрипки</p>
-						</div>
-					</div>
-					<div class="gallery__item  col-3 gallery__item--calm">
-						<div class="gallery--offset">
-						<h3>Летний штиль</h3>
-						<p>За кулисами концерта</p>
-						</div>
-					</div>
-					<div class="gallery__item col-3 gallery__item--trofimov">
-						<div class="gallery--offset">
-						<h3>Сергей Трофимов</h3>
-						<p>ЛЮБЭ-Выйду в поле с конем</p>
-						</div>
-				<!-- 	</div> -->
-				</div>			
-		</div>
-	</div>
+        </div>
+        
+          <div class="gallery-list col-3">
+          <div class="gallery__item gallery__item--yang" style="">
+            <div class="gallery--offset">
+              <h3>Янг Чжо</h3>
+              <p>Репетиция сольной партии скрипки</p>
+            </div>
+          </div>
+          <div class="gallery__item gallery__item--calm">
+            <div class="gallery--offset">
+            <h3>Летний штиль</h3>
+            <p>За кулисами концерта</p>
+            </div>
+          </div>
+          <div class="gallery__item gallery__item--trofimov">
+            <div class="gallery--offset">
+            <h3>Сергей Трофимов</h3>
+            <p>ЛЮБЭ-Выйду в поле с конем</p>
+            </div>
+          </div>
+        </div>      
+    </div>
+  </div>
 </section>
 
 <section class="page-map">
@@ -195,9 +196,9 @@
 				        });
 					    }
 						</script>
+					</div>
 						<div class="btn-mobail">
 					<a href="#"><h2>Вводный урок</h2></a>
-					</div>
 					</div>
 						
 				</div>
