--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 			<div class="col-5 genres__card-inner--offset">
 				<div class="genres__card genres__card--guitar"> 
 					<h3 class="genres__card-title">Гитара</h3>
-
 					<p class="genres-text">Хочешь играть как Джими Хендрикс, Би Би Кинг или Андрес Сеговия— мы научим</p> 
 				</div>
 			</div>
+
 			<div class="col-6">
 				<div class="genres__card genres__card--vocal"> 
 					<h3 class="genres__card-title">Вокал</h3>
@@ -80,13 +80,13 @@
 					<p class="genres-text">Академический, рок, эстрадный, джазовый </p> 
 				</div>
 			</div>
-			<div class="col-3">
-				<div class="genres__card genres__card--lectures"> 
+			<!-- <div class="col-3"> -->
+				<div class="genres__card genres__card--lectures col-3"> 
 					<h3 class="genres__card-title">Лекции</h3>
 					<p class="genres-tex">Подтяни свои знания в теории музыки</p> 
 				</div>
-			</div>
-			<div class="col-3">	
+			<!-- </div> -->
+			<div class="col-3 genres__card--relative">	
 				<div class="genres__card genres__card--all"> 
 					<h3 class="genres__card-title">Все направления</h3>
 			</div>
@@ -146,8 +146,9 @@
     <div class="row">
         <div class="col-8 gallery__item--cherry">
           <h3>Зимняя вишня</h3>
-          <p>Заключительный зимний концерт 2017 года
-выступало 97 учеников</p>
+          <p class="gallery__item--text1200">Заключительный зимний концерт 2017 года
+						выступало 97 учеников</p>
+					<p class="gallery__item--text320">Финальный концерт 2018г.</p>
         </div>
         
           <div class="gallery-list col-3">
